--- a/style.css
+++ b/style.css
@@ -3,11 +3,16 @@ body {
   margin: 0;
   padding: 0;
   line-height: 1.6;
+  background: linear-gradient(to bottom, #004a7c 0%, #ffffff 100%);
 }
 
 header {
   background: #003366;
   color: #fff;
+  padding: 2rem;
+  text-align: center;
+  background: linear-gradient(to right, #003366, #0066cc);
+  color: white;
   padding: 2rem;
   text-align: center;
 }
