--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header {
 }
 
 nav {
-  background: #f4f4f4;
+  background: #ffffff;
   padding: 1rem;
   text-align: center;
 }
@@ -80,3 +80,4 @@ img {
     background-color: #555;
     border-radius: 5px;
 }
+
